<resources>
    <!-- App -->
    <string name="app_name">DitDah</string>

    <!-- Permission -->
    <string name="perm_flash">Flashlight Permission</string>
    <string name="perm_flash_desc">DitDah needs to access the flashlight in order to flash morse code messages.</string>

    <!-- Menu Navigation -->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share...</string>
    <string name="action_flashlight">Flashlight</string>
    <string name="action_vibrate">Vibrate</string>
    <string name="action_sound">Sound</string>

    <!-- MainActivity Translator -->
    <string name="translator_hint">Translate...</string>

    <!-- Preferences -->
    <string name="pref_catagory_general_label">General</string>
    <string name="pref_catagory_translator_label">Translator</string>

    <!-- Play Option Labels and Values -->
    <string name="pref_play_option_key">playoption</string>
    <string name="pref_play_option_title">Play Option</string>

    <string name="pref_play_option_sound_label">Sound</string>
    <string name="pref_play_option_vibrate_label">Vibrate</string>
    <string name="pref_play_option_flash_label">Flash</string>

    <string name="pref_play_option_sound_value">sound</string>
    <string name="pref_play_option_vibrate_value">vibrate</string>
    <string name="pref_play_option_flash_value">flash</string>

    <!-- Error Messages -->
    <string name="err_empty_input">Please enter a message to translate</string>

    <!-- Dit Default Representation -->
    <string name="pref_dit_representation_default">.</string>
    <string name="pref_dit_representation_label">Dit Representation</string>
    <string name="pref_dit_representation_key">dit</string>

    <!-- Dah Default Representation -->
    <string name="pref_dah_representation_default">-</string>
    <string name="pref_dah_representation_label">Dah Representation</string>
    <string name="pref_dah_representation_key">dah</string>

</resources>
