<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.neoskeeter.ditdah.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="99"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_flashlight"
        android:icon="@drawable/ic_flashlight"
        android:orderInCategory="98"
        android:title="@string/action_flashlight"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_vibrate"
        android:icon="@drawable/ic_vibrate"
        android:orderInCategory="97"
        android:title="@string/action_vibrate"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sound"
        android:icon="@drawable/ic_sound"
        android:orderInCategory="96"
        android:title="@string/action_sound"
        app:showAsAction="always" />

</menu>
